Avoid page breaks inside details elements

--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -18,6 +18,7 @@ main details {
         cursor: pointer;
     }
 
+    break-inside: avoid;
     transition: border 0.25s ease, padding 0.5s ease;
 }
 
